--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,19 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "StaticFiles": {
+    "Headers": {
+      "Cache-Control": "no-cache, no-store",
+      "Pragma": "no-cache",
+      "Expires": "-1"
+    }
+  },
+  "Data": {
+    "MongoConnectionString": {
+      "ConnectionString": "mongodb://localhost:27017",
+      "DatabaseName": "MovieDatabase",
+      "CollectionName": "Movies"
+    }
   }
 }
