--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "Angular2Playground",
+  "description": "Angular2 application build on top of ASP .NET Core",
+  "keywords": [ "core", "angular2" ],
+  "homepage": "https://github.com/jasper22/Angular2Playground",
   "version": "1.0.0",
   "scripts": {
-    "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
-    "lite": "lite-server",
+    "start": "tsc && concurrently \"npm run tcs:w\" ",
     "postinstall": "npm run typings install && gulp restore",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
@@ -17,13 +19,24 @@
     }
   ],
 
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jasper22/Angular2Playground.git"
+  },
+
+  "engines": {
+    "node": "^4.6.1",
+    "npm": "^3.10.9"
+  },
+
   "dependencies": {
     "@angular/common": "~2.1.1",
     "@angular/compiler": "~2.1.1",
     "@angular/core": "~2.1.1",
     "@angular/forms": "~2.1.1",
     "@angular/http": "~2.1.1",
-    "@angular/platform-browser": "~2.1.1",    "@angular/platform-browser-dynamic": "~2.1.1",
+    "@angular/platform-browser": "~2.1.1",
+    "@angular/platform-browser-dynamic": "~2.1.1",
     "@angular/router": "~3.1.1",
     "@angular/upgrade": "~2.1.1",
     "core-js": "^2.4.1",
@@ -34,14 +47,14 @@
     "bootstrap": "^3.3.6",
     "jquery": "^3.1.1",
     "jquery-validation": "^1.15.1",
-    "jquery-validation-unobtrusive": "^3.2.6"
+    "jquery-validation-unobtrusive": "^3.2.6",
+    "primeng": "^1.0.0-rc.4"
   },
 
   "devDependencies": {
     "@types/core-js": "^0.9.34",
     "@types/node": "^6.0.45",
     "concurrently": "^3.0.0",
-    "lite-server": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-sourcemaps": "^2.2.0",
