--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": false,
-    "pretty": true,
+    "pretty": false,
     "removeComments": false,
     "sourceMap": true,
     "target": "es5",
